Remove method only used in tests